# milter-zipcrypt

./: .gitignore  Makefile  Makefile.am  README  TODO  configure.ac
apt/: Makefile.am  build-in-chroot.sh  milter-zipcrypt-depended-packages  update-repository.sh
data/: Makefile.am  milter-zipcrypt.conf
data/init.d/: Makefile.am
data/init.d/redhat/: Makefile.am  milter-zipcrypt
data/init.d/redhat/sysconfig/: Makefile.am  milter-zipcrypt
debian/: control  rules
debian/hardy/: control  rules
debian/lenny/: milter-zipcrypt.init
debian/lucid/: changelog
man/: Makefile.am  milter-zipcrypt.8  milter-zipcrypt.conf.5
rpm/centos/: milter-zipcrypt.spec.in
rpm/fedora/: milter-zipcrypt.spec.in
src/: Makefile.am  base64.c  base64.h  gen-table.c  milter-zipcrypt.c  mz-attachment.c  mz-attachment.h  mz-base64.c  mz-config.c  mz-config.h  mz-convert.c  mz-convert.h  mz-filter.c  mz-filter.h  mz-list.c  mz-list.h  mz-mime-utils.c  mz-mime-utils.h  mz-password.c  mz-password.h  mz-quoted-printable.c  mz-quoted-printable.h  mz-sendmail.c  mz-sendmail.h  mz-utils.c  mz-utils.h  mz-zip.c  mz-zip.h
test/: Makefile.am  milter-ziprypt-test-suite.c  mz-test-sendmail.xml  mz-test-utils.c  mz-test-utils.h  run-test.sh  test-base64.c  test-config.c  test-convert.c  test-filter.c  test-milter-zipcrypt.c  test-password.c  test-sendmail.c  test-utils.c  test-zip-stream.c  test-zlib.c
test/fixtures/: Makefile.am  attachment  attachment_body  attachment_content_disposition_with_line_feed  attachment_filename_is_mime_encoded  body  config  no_attachment  rfc2311  test-mail  text  text-attachments
test/fixtures/config/: normal.conf
test/fixtures/sendmail-test/: .gitignore  Makefile.am  sendmail-test.c
yum/: Makefile.am  build-in-chroot.sh  build-repository-rpm.sh  milter-zipcrypt-depended-packages  milter-zipcrypt-repository.spec  milter-zipcrypt.repo
zip30/: Makefile.am
