SUBDIRS = sendmail-test

EXTRA_DIST =						\
	attachment					\
	attachment_body					\
	attachment_content_disposition_with_line_feed	\
	attachment_filename_is_mime_encoded		\
	body						\
	body.zip					\
	no_attachment					\
	rfc2311						\
	stream.zip					\
	t.png						\
	test-mail					\
	text						\
	text-attachments
